Turn off exhaustivestruct check on tests
For testing purposes it doesn't matter if the structs are initialized
fully - some tests just need to validate the type of a struct and
leaving this on for test files results in errors on those tests.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -87,6 +87,7 @@ issues:
       # Turn off the following linters for all test files
       linters:
         - dupl
+        - exhaustivestruct
         - lll
         - funlen
         - errcheck
